Fix padding and type on mobile intro section

--- a/source/assets/css/components/_intro-section.scss
+++ b/source/assets/css/components/_intro-section.scss
@@ -1,6 +1,9 @@
 .intro-section {
   text-align: center;
   padding: 0 0 2em;
+  @media screen and (max-width: 48em) {
+    padding: 1em 0 1em;
+  }
   h1 {
     font-family: $display-serif;
     font-weight: 300;
@@ -23,11 +26,17 @@
     line-height: 1.4em;
     margin: 0;
     @media screen and (max-width: 48em) {
-      font-size: 1.5em;
+      font-size: 1.3em;
+      line-height: 1.5em;
     }
   }
 }
 
 .hero {
   border-bottom: 1px solid $black;
+  .row {
+    & > div:first-child {
+      padding: 0;
+    }
+  }
 }
